--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -31,12 +31,8 @@ steps:
       '.', # Build context is the root of the repository
       '--no-cache'
     ]
-    # This step depends on the previous steps if build artifacts from them were needed,
-    # but Docker builds are generally independent unless sharing context in complex ways.
-    # For clarity, no explicit waitFor needed here as they build different things from root context.
 
 # List of images to be pushed to Artifact Registry (or GCR)
-# Cloud Build will push these images after all build steps complete successfully.
 images:
   - 'gcr.io/cerberus-data-cloud/agenda-api:v1'
   - 'gcr.io/cerberus-data-cloud/campaigns-api:v1'
@@ -45,6 +41,6 @@ images:
 # Specify the service account for Cloud Build to use for executing these steps
 serviceAccount: 'projects/cerberus-data-cloud/serviceAccounts/cerberus-service-account@cerberus-data-cloud.iam.gserviceaccount.com'
 
-# Optional: You can also specify logging configuration if needed
+# Explicitly set logging options as required when a custom service account is used.
 options:
-  logging: CLOUD_LOGGING_ONLYCloud
+  logging: CLOUD_LOGGING_ONLY
