--- a/emmons_frontend/Dockerfile
+++ b/emmons_frontend/Dockerfile
@@ -1,6 +1,6 @@
 # Stage 1: Build the Flutter application
-# Using a public image from Docker Hub like cirrusci/flutter
-FROM cirrusci/flutter:stable AS build
+# Using a specific newer version of cirrusci/flutter image
+FROM cirrusci/flutter:3.22.2 AS build
 
 # Set working directory for Flutter build
 WORKDIR /app_src
