--- a/emmons_frontend/Dockerfile
+++ b/emmons_frontend/Dockerfile
@@ -1,13 +1,36 @@
-# Stage 1: Diagnostic - Can we pull a basic image from Docker Hub?
-FROM alpine:latest AS build
+# Stage 1: Build the Flutter application
+# Using leoafarias/flutter image
+FROM leoafarias/flutter:3.22.1 AS build
 
-# If the above line works, Cloud Build can reach Docker Hub.
-# We'll just do a simple command to make the build proceed if it works.
-RUN echo "Alpine image pulled successfully."
+# Set working directory for Flutter build
+WORKDIR /app_src
 
-# Stage 2: Serve a placeholder (real build is bypassed for this test)
+# Copy pubspec.yaml and pubspec.lock first to leverage Docker cache
+COPY emmons_frontend/pubspec.yaml ./
+COPY emmons_frontend/pubspec.lock ./
+
+# Get dependencies
+RUN flutter pub get
+
+# Copy the rest of the frontend application code
+COPY emmons_frontend/ ./
+
+# Build the web application
+# Using --release for a production build
+RUN flutter build web --release
+
+# Stage 2: Serve the built web application with Nginx
 FROM nginx:1.25-alpine
+
+# Copy the built static files from the 'build' stage
+# The output of 'flutter build web' is in 'build/web'
+COPY --from=build /app_src/build/web /usr/share/nginx/html
+
+# Copy a custom Nginx configuration file
 COPY emmons_frontend/nginx.conf /etc/nginx/conf.d/default.conf
-RUN echo "Hello from Nginx placeholder" > /usr/share/nginx/html/index.html
+
+# Expose port 80
 EXPOSE 80
+
+# Command to run Nginx
 CMD ["nginx", "-g", "daemon off;"]
