--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
     id: 'build-report-backend'
     args: [
       'build',
-      '-t', 'gcr.io/cerberus-data-cloud/agenda-api:v1',
+      '-t', 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/agenda-api:v1', # Updated to Artifact Registry
       '-f', 'cerberus_report_backend/Dockerfile',
       '.', # Build context is the root of the repository
       '--no-cache'
@@ -15,7 +15,7 @@ steps:
     id: 'build-campaigns-backend'
     args: [
       'build',
-      '-t', 'gcr.io/cerberus-data-cloud/campaigns-api:v1',
+      '-t', 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/campaigns-api:v1', # Updated to Artifact Registry
       '-f', 'cerberus_campaigns_backend/Dockerfile', # Use the Dockerfile in its specific directory
       '.', # Build context is the root of the repository
       '--no-cache'
@@ -26,19 +26,20 @@ steps:
     id: 'build-emmons-frontend'
     args: [
       'build',
-      '-t', 'gcr.io/cerberus-data-cloud/emmons-frontend:v1',
+      '-t', 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/emmons-frontend:v1', # Updated to Artifact Registry
       '-f', 'emmons_frontend/Dockerfile', # Use the Dockerfile in its specific directory
       '.', # Build context is the root of the repository
       '--no-cache'
     ]
 
-# List of images to be pushed to Artifact Registry (or GCR)
+# List of images to be pushed to Artifact Registry
 images:
-  - 'gcr.io/cerberus-data-cloud/agenda-api:v1'
-  - 'gcr.io/cerberus-data-cloud/campaigns-api:v1'
-  - 'gcr.io/cerberus-data-cloud/emmons-frontend:v1'
+  - 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/agenda-api:v1'
+  - 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/campaigns-api:v1'
+  - 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/emmons-frontend:v1'
 
 # Specify the service account for Cloud Build to use for executing these steps
+# Ensure this service account has 'Artifact Registry Writer' role for the project or specifically for the 'cerberus-images' repository.
 serviceAccount: 'projects/cerberus-data-cloud/serviceAccounts/cerberus-service-account@cerberus-data-cloud.iam.gserviceaccount.com'
 
 # Explicitly set logging options as required when a custom service account is used.
