--- a/cerberus_campaigns_backend/Dockerfile
+++ b/cerberus_campaigns_backend/Dockerfile
@@ -8,7 +8,9 @@ ENV PYTHONUNBUFFERED 1
 ENV FLASK_APP=run.py
 # Set FLASK_ENV to production by default for Docker images
 ENV FLASK_ENV=production
-# The port the application will run on, matching run.py's default or environment variable
+# The port the application will run on, matching run.py's default or environment variable.
+# Cloud Run will provide its own PORT environment variable, which Gunicorn will use.
+# This ENV PORT here is more of a default or for local `docker run` if $PORT isn't set.
 ENV PORT=5001
 
 # Set the working directory in the container
@@ -16,10 +18,7 @@ WORKDIR /app
 
 # Install system dependencies that might be needed by Python packages (e.g., PostgreSQL client)
 # psycopg2-binary (common for Flask/PostgreSQL) often needs libpq-dev
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    libpq-dev \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends     libpq-dev     build-essential     && rm -rf /var/lib/apt/lists/*
 
 # Copy the requirements file into the container at /app
 COPY cerberus_campaigns_backend/requirements.txt .
@@ -34,12 +33,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Ensure the .env file is NOT copied if it contains secrets; secrets should be passed as environment variables.
 COPY cerberus_campaigns_backend/ /app/
 
-# Make port 5001 available to the world outside this container
-EXPOSE 5001
+# Make port defined by $PORT (set by Cloud Run, defaults to 5001 here if not set) available
+# This EXPOSE is informational; Cloud Run handles actual port mapping based on what the app listens to.
+EXPOSE $PORT
 
 # Define the command to run the application
+# Using shell form for CMD allows $PORT environment variable expansion.
 # Gunicorn is a production-ready WSGI server.
-# --bind 0.0.0.0:$PORT: Binds Gunicorn to all network interfaces on the port specified by the $PORT environment variable (provided by Cloud Run).
+# --bind "0.0.0.0:$PORT": Binds Gunicorn to all network interfaces on the port specified by the $PORT environment variable (provided by Cloud Run).
 # "run:app": Tells Gunicorn to use the 'app' Flask application instance located in the 'run.py' file.
 # The number of workers can be tuned. A common recommendation is (2 * number_of_cores) + 1.
 # For Cloud Run, typically start with a small number like 2-4 workers.
@@ -48,4 +49,4 @@ EXPOSE 5001
 # --access-logfile - : Send access logs to stdout
 # --error-logfile - : Send error logs to stderr
 # These are good for Cloud Run, which collects logs from stdout/stderr.
-CMD ["gunicorn", "--bind", "0.0.0.0:$PORT", "--workers", "4", "--access-logfile", "-", "--error-logfile", "-", "run:app"]
+CMD gunicorn --bind "0.0.0.0:$PORT" --workers 4 --access-logfile - --error-logfile - run:app
