--- a/cerberus_campaigns_backend/requirements.txt
+++ b/cerberus_campaigns_backend/requirements.txt
@@ -10,3 +10,4 @@ gunicorn==21.2.0 # WSGI server for deployment
 pytest==7.4.4 # For running tests
 pytest-flask==1.3.0 # For Flask specific test fixtures
 Flask-CORS==4.0.0 # For Cross-Origin Resource Sharing
+stripe
