--- a/emmons_frontend/pubspec.yaml
+++ b/emmons_frontend/pubspec.yaml
@@ -35,13 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  http: ^1.2.1 # Added for making HTTP requests
+  http: ^1.2.1
   flutter_riverpod: ^2.6.1
-  flutter_svg: ^2.0.10+1 # Added for SVG support
-  go_router: ^14.6.2
+  flutter_svg: ^2.0.10+1
+  go_router: ^15.1.2 # Updated version
   google_fonts: ^6.2.1
   url_launcher: ^6.3.1
-  flutter_stripe: ^10.1.1
+  flutter_dotenv: ^5.1.0
+  flutter_stripe: ^11.0.0 # Updated version
 
 dev_dependencies:
   flutter_test:
