--- a/emmons_frontend/pubspec.yaml
+++ b/emmons_frontend/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   google_fonts: ^6.2.1
   url_launcher: ^6.3.1
   flutter_dotenv: ^5.1.0
-  flutter_stripe: ^11.0.0 # Updated version
+  # Pinning to a specific stable version to avoid a bug in 11.5.0
+  # where color properties were accessed incorrectly.
+  flutter_stripe: 11.0.1
 
 dev_dependencies:
   flutter_test:
