--- a/emmons_frontend/pubspec.yaml
+++ b/emmons_frontend/pubspec.yaml
@@ -69,8 +69,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/fonts/
-    - assets/images/
+    # This single entry includes all subdirectories, such as assets/images/ and assets/fonts/
+    - assets/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
