--- a/cerberus_campaigns_backend/requirements.txt
+++ b/cerberus_campaigns_backend/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.3
-SQLAlchemy==2.0.23
+SQLAlchemy==2.0.42
 Flask-SQLAlchemy==3.1.1
-psycopg2-binary==2.9.9
+psycopg[binary]==3.2.9
 python-dotenv==1.0.0
 Flask-Migrate==4.0.5 # For database migrations
 Flask-Bcrypt==1.0.1 # For password hashing
@@ -10,4 +10,4 @@ gunicorn==21.2.0 # WSGI server for deployment
 pytest==7.4.4 # For running tests
 pytest-flask==1.3.0 # For Flask specific test fixtures
 Flask-CORS==4.0.0 # For Cross-Origin Resource Sharing
-stripe==2.60.0
+stripe==12.3.0
