--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,7 +18,7 @@ steps:
     waitFor: ['-']
     args: [
       'build',
-      '-t', 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/campaigns-api:v1', # Updated to Artifact Registry
+      '-t', 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/campaigns-api:latest', # Updated to Artifact Registry
       '-f', 'Dockerfile', # Dockerfile is now in the current context
       '.' # Build context is now cerberus_campaigns_backend
     ]
@@ -50,7 +50,7 @@ steps:
 # List of images to be pushed to Artifact Registry
 images:
   - 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/agenda-api:v1'
-  - 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/campaigns-api:v1'
+  - 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/campaigns-api:latest'
   - 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/cerberus-frontend:latest'
   - 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/emmons-frontend:latest'
 
