--- a/emmons_frontend/pubspec.yaml
+++ b/emmons_frontend/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   flutter_svg: ^2.0.10+1 # Added for SVG support
   go_router: ^16.0.0
   url_launcher: ^6.3.1
-  flutter_stripe: ^15.0.0
+  flutter_stripe: ^11.5.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
