fix: Update comments for clarity on PostgreSQL dependencies in Dockerfile and config.py

--- a/cerberus_campaigns_backend/Dockerfile
+++ b/cerberus_campaigns_backend/Dockerfile
@@ -17,7 +17,7 @@ ENV PORT=5001
 WORKDIR /app
 
 # Install system dependencies that might be needed by Python packages (e.g., PostgreSQL client)
-# psycopg2-binary (common for Flask/PostgreSQL) often needs libpq-dev
+# psycopg (common for Flask/PostgreSQL) often needs libpq-dev
 RUN apt-get update && apt-get install -y --no-install-recommends     libpq-dev     build-essential     && rm -rf /var/lib/apt/lists/*
 
 # Copy the requirements file into the container at /app
