--- a/emmons_frontend/pubspec.yaml
+++ b/emmons_frontend/pubspec.yaml
@@ -66,11 +66,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/ # This will include emmons_frontend/assets/CurtisEmmonsRepublicanPrimarySquare.png
-              # and any other files directly under emmons_frontend/assets/
+    - assets/
     - assets/images/
-    - assets/fonts/ # This will include emmons_frontend/assets/fonts/BebasNeue-Regular.ttf
-                    # and any other files directly under emmons_frontend/assets/fonts/
+    - assets/fonts/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
