fix: Flatten the nested assets directory in Dockerfile

--- a/emmons_frontend/Dockerfile
+++ b/emmons_frontend/Dockerfile
@@ -23,6 +23,9 @@ RUN flutter build web --release
 RUN mv /app_src/build/web/assets/AssetManifest.json /app_src/build/web/
 RUN mv /app_src/build/web/assets/FontManifest.json /app_src/build/web/
 
+# Flatten the nested assets directory
+RUN mv /app_src/build/web/assets/assets/* /app_src/build/web/assets/
+
 # Stage 2: Serve the built web application with Nginx
 FROM nginx:1.25-alpine
 
