--- a/emmons_frontend/Dockerfile
+++ b/emmons_frontend/Dockerfile
@@ -19,12 +19,8 @@ COPY . .
 # Using --release for a production build
 RUN flutter build web --release
 
-# Move the asset manifests to the correct location
-RUN mv /app_src/build/web/assets/AssetManifest.json /app_src/build/web/
-RUN mv /app_src/build/web/assets/FontManifest.json /app_src/build/web/
-
-# Flatten the nested assets directory
-RUN mv /app_src/build/web/assets/assets/* /app_src/build/web/assets/
+# List the contents of the build directory for diagnostics
+RUN ls -lR /app_src/build/web
 
 # Stage 2: Serve the built web application with Nginx
 FROM nginx:1.25-alpine
