fix: Correct file structure for asset manifests in Dockerfile

--- a/emmons_frontend/Dockerfile
+++ b/emmons_frontend/Dockerfile
@@ -19,8 +19,10 @@ COPY . .
 # Using --release for a production build
 RUN flutter build web --release
 
-# List the contents of the build directory for diagnostics
-RUN ls -lR /app_src/build/web
+# Correct the file structure after the build
+RUN mv /app_src/build/web/assets/AssetManifest.json /app_src/build/web/
+RUN mv /app_src/build/web/assets/FontManifest.json /app_src/build/web/
+RUN mv /app_src/build/web/assets/assets/* /app_src/build/web/assets/
 
 # Stage 2: Serve the built web application with Nginx
 FROM nginx:1.25-alpine
