--- a/emmons_frontend/pubspec.yaml
+++ b/emmons_frontend/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   go_router: ^16.0.0
   url_launcher: ^6.3.1
   flutter_stripe: ^11.5.0
+  flutter_web_plugins:
 
 dev_dependencies:
   flutter_test:
