--- a/emmons_frontend/pubspec.yaml
+++ b/emmons_frontend/pubspec.yaml
@@ -17,8 +17,10 @@ dependencies:
   flutter_svg: ^2.0.10+1
   go_router: ^16.0.0
   url_launcher: ^6.3.1
-  flutter_stripe: ^11.5.0
+  js: ^0.7.1
+  
   flutter_web_plugins:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
