--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,48 +1,31 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "cerberus_frontend",
-            "cwd": "cerberus_frontend",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "cerberus_frontend (profile mode)",
-            "cwd": "cerberus_frontend",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "cerberus_frontend (release mode)",
-            "cwd": "cerberus_frontend",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release"
-        },
         {
             "name": "emmons_frontend",
             "cwd": "emmons_frontend",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "program": "lib/main.dart"
         },
         {
-            "name": "emmons_frontend (profile mode)",
-            "cwd": "emmons_frontend",
+            "name": "cerberus_campaigns_backend",
+            "type": "python",
             "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
+            "program": "run.py",
+            "cwd": "cerberus_campaigns_backend",
+            "args": ["run"],
+            "env": {
+                "FLASK_APP": "app",
+                "FLASK_ENV": "development"
+            },
+            "justMyCode": true
+        }
+    ],
+    "compounds": [
         {
-            "name": "emmons_frontend (release mode)",
-            "cwd": "emmons_frontend",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release"
+            "name": "Full Stack Debug",
+            "configurations": ["emmons_frontend", "cerberus_campaigns_backend"]
         }
     ]
 }
