--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,20 +3,22 @@
     "configurations": [
         {
             "name": "emmons_frontend",
-            "cwd": "emmons_frontend",
+            "cwd": "$Cerberus-Data-Cloud/emmons_frontend",
             "request": "launch",
             "type": "dart",
             "program": "lib/main.dart"
+            "flutterMode": "debug"
         },
         {
             "name": "cerberus_campaigns_backend",
             "type": "python",
             "request": "launch",
+            "module": "flask",
             "program": "run.py",
-            "cwd": "cerberus_campaigns_backend",
-            "args": ["run"],
+            "cwd": "$Cerberus-Data-Cloud/cerberus_campaigns_backend",
+            "args": ["run", "--no-debugger"]
             "env": {
-                "FLASK_APP": "app",
+                "FLASK_APP": "run.py",
                 "FLASK_ENV": "development"
             },
             "justMyCode": true
