--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,17 +6,17 @@
             "cwd": "$Cerberus-Data-Cloud/emmons_frontend",
             "request": "launch",
             "type": "dart",
-            "program": "lib/main.dart"
-            "flutterMode": "debug"
+            "program": "lib/main.dart",
+            "flutterMode": "debug",
         },
         {
             "name": "cerberus_campaigns_backend",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "module": "flask",
             "program": "run.py",
             "cwd": "$Cerberus-Data-Cloud/cerberus_campaigns_backend",
-            "args": ["run", "--no-debugger"]
+            "args": ["run", "--no-debugger"],
             "env": {
                 "FLASK_APP": "run.py",
                 "FLASK_ENV": "development"
