--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Emmons Web",
+            "name": "emmons_frontend",
             "cwd": "emmons_frontend",
             "request": "launch",
             "type": "dart",
@@ -14,7 +14,7 @@
             "type": "debugpy",
             "request": "launch",
             "module": "flask",
-            "cwd": "cerberus_campaigns_backend",
+            "cwd": "c:/Users/macke/Desktop/Github/Cerberus-Data-Cloud/cerberus_campaigns_backend",
             "args": ["run", "--no-debugger"],
             "env": {
                 "FLASK_APP": "run.py",
@@ -26,7 +26,7 @@
     "compounds": [
         {
             "name": "Full Stack Debug",
-            "configurations": ["emmons_frontend", "cerberus_campaigns_backend"]
+            "configurations": ["emmons_frontend", "Cerberus Campaigns Backend"]
         }
     ]
 }
