--- a/cerberus_campaigns_backend/.gitignore
+++ b/cerberus_campaigns_backend/.gitignore
@@ -1,7 +1,10 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
+*.pyc
+*.pyo
+*.pyd
+*.class
 
 # Environment
 .env
@@ -19,7 +22,6 @@ venv.bak
 *.swo
 
 # Dependencies
-node_modules/
 instance/
 
 # Flask
@@ -43,11 +45,11 @@ coverage.xml
 # Testing
 .pytest_cache/
 .tox/
+.nox/
+.hypothesis/
 
 # Distribution / packaging
-.Python
 build/
-develop-eggs/
 dist/
 downloads/
 eggs/
@@ -66,8 +68,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -76,18 +76,11 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
 .cache
 nosetests.xml
 coverage.xml
 *.cover
 *.py,cover
-.hypothesis/
-.pytest_cache/
 
 # Jupyter Notebook
 .ipynb_checkpoints
