--- a/cerberus_frontend/.gitignore
+++ b/cerberus_frontend/.gitignore
@@ -1,2 +1,19 @@
+# Miscellaneous
+*.log
+.DS_Store
+
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.pub-cache/
+.pub/
 /build/
-/.dart_tool/
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
