--- a/cerberus_campaigns_backend/.env.example
+++ b/cerberus_campaigns_backend/.env.example
@@ -12,6 +12,7 @@ DATABASE_URL="postgresql://campaign_user:USER_PASSWORD@/campaign_data?host=/clou
 
 # Stripe
 STRIPE_SECRET_KEY="your_stripe_secret_key"
+STRIPE_WEBHOOK_SECRET="your_stripe_webhook_secret"
 
 # Cloud SQL Proxy Information (if connecting from local or non-GCP environment)
 # These are not directly used by Flask but are good to note for connection setup.
