--- a/cerberus_frontend/pubspec.yaml
+++ b/cerberus_frontend/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intl: ^0.20.2
   file_picker: ^8.0.0+1
   video_player: ^2.10.0
+  flutter_stripe: ^11.5.0
 
 dev_dependencies:
   flutter_test:
