--- a/emmons_frontend/pubspec.yaml
+++ b/emmons_frontend/pubspec.yaml
@@ -17,12 +17,13 @@ dependencies:
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.10+1
   go_router: ^16.0.0
-  url_launcher: ^6.3.1
+  url_launcher: ^6.3.2
   js: ^0.7.1
   
   flutter_web_plugins:
     sdk: flutter
   web: ^1.1.1
+  flutter_stripe: ^10.1.1
 
 dev_dependencies:
   flutter_test:
