--- a/emmons_frontend/nginx.conf
+++ b/emmons_frontend/nginx.conf
@@ -11,8 +11,22 @@ server {
 
     # Optional: Add headers for caching, security, etc.
     # Example: Cache static assets aggressively
-    location ~* \.(?:css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    location ~* \.(?:png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public";
+    }
+
+    # Do not cache main.dart.js and flutter.js as they change with every build
+    location ~* (main.dart.js|flutter.js)$ {
+        expires off;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
+    }
+
+    # Ensure index.html is never cached
+    location = /index.html {
+        expires off;
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+        add_header Pragma "no-cache";
     }
 }
