--- a/cerberus_report_backend/Dockerfile
+++ b/cerberus_report_backend/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.10
 WORKDIR /app
 RUN python --version > /app/python_version.txt && cat /app/python_version.txt
 COPY requirements.txt .
-RUN pip install --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip
+RUN pip install --no-cache-dir -r requirements.txt
 COPY api.py .
 COPY scraper.py .
 COPY notification_sender.py .
