--- a/emmons_frontend/Dockerfile
+++ b/emmons_frontend/Dockerfile
@@ -36,6 +36,16 @@ FROM nginx:1.25-alpine
 # The output of 'flutter build web' is in 'build/web'
 COPY --from=build /app_src/build/web /usr/share/nginx/html
 
+# Move the contents of the nested assets directory to the root assets directory
+RUN mv /usr/share/nginx/html/assets/assets/* /usr/share/nginx/html/assets/
+# Remove the now empty nested assets directory
+RUN rmdir /usr/share/nginx/html/assets/assets
+
+# Move the contents of the nested fonts directory to the root assets directory
+RUN mv /usr/share/nginx/html/assets/fonts/* /usr/share/nginx/html/assets/fonts/
+# Remove the now empty nested fonts directory
+RUN rmdir /usr/share/nginx/html/assets/fonts
+
 # Copy a custom Nginx configuration file
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
@@ -44,3 +54,4 @@ EXPOSE 80
 
 # Command to run Nginx
 CMD ["nginx", "-g", "daemon off;"]
+
