--- a/cerberus_report_backend/requirements.txt
+++ b/cerberus_report_backend/requirements.txt
@@ -4,6 +4,5 @@ pdfplumber
 Flask
 Flask-CORS
 gunicorn
-cloud-sql-python-connector~=1.18.2
-pg8000>=1.29.0,<2.0.0
+cloud-sql-python-connector[psycopg]
 sendgrid>=6.0.0,<7.0.0
