--- a/cerberus_campaigns_backend/requirements.txt
+++ b/cerberus_campaigns_backend/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.3.3
 SQLAlchemy==2.0.42
 Flask-SQLAlchemy==3.1.1
-cloud-sql-python-connector[psycopg]
+cloud-sql-python-connector
+psycopg[binary]
 python-dotenv==1.0.0
 Flask-Migrate==4.0.5 # For database migrations
 Flask-Bcrypt==1.0.1 # For password hashing
