--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -53,10 +53,10 @@ steps:
     args: [
       '-i', 'us-south1-docker.pkg.dev/cerberus-data-cloud/cerberus-images/campaigns-api:latest',
       
-      '-e', 'DB_USER=$DB_USER',
-      '-e', 'DB_PASS=$DB_PASS',
-      '-e', 'DB_NAME=$DB_NAME',
-      '-e', 'DB_CONNECTION_NAME=$DB_CONNECTION_NAME',
+      '-e', 'DB_USER=$$DB_USER',
+      '-e', 'DB_PASS=$$DB_PASS',
+      '-e', 'DB_NAME=$$DB_NAME',
+      '-e', 'DB_CONNECTION_NAME=$$DB_CONNECTION_NAME',
       '-e', 'FLASK_ENV=production',
       '--',
       'flask',
