--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -47,7 +47,7 @@ steps:
     ]
 
   # Step 5: Run Cloud SQL Proxy
-  - name: 'gcr.io/cloud-builders/cloud_sql_proxy'
+  - name: 'gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.18.0'
     id: 'cloud-sql-proxy'
     waitFor: ['build-campaigns-backend']
     args: ['-instances=$(DB_CONNECTION_NAME)=unix:/cloudsql/$(DB_CONNECTION_NAME)', '-dir=/cloudsql']
