--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -51,14 +51,15 @@ steps:
     id: 'debug-db-connection-name'
     waitFor: ['build-campaigns-backend']
     entrypoint: 'bash'
-    args: ['-c', 'echo "DB_CONNECTION_NAME: $(DB_CONNECTION_NAME)"']
+    args: ['-c', 'echo "DB_CONNECTION_NAME: $DB_CONNECTION_NAME"']
     secretEnv: ['DB_CONNECTION_NAME']
 
   # Step 6: Run Cloud SQL Proxy
   - name: 'gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.18.0'
     id: 'cloud-sql-proxy'
     waitFor: ['debug-db-connection-name']
-    args: ['$(DB_CONNECTION_NAME)', '-unix-socket=/cloudsql']
+    entrypoint: 'bash'
+    args: ['-c', 'cloud-sql-proxy $DB_CONNECTION_NAME -unix-socket=/cloudsql']
     secretEnv: ['DB_CONNECTION_NAME']
 
   # Step 6: Run Database Migrations using a secret for the DATABASE_URL
