--- a/cerberus_campaigns_backend/requirements.txt
+++ b/cerberus_campaigns_backend/requirements.txt
@@ -13,3 +13,5 @@ Flask-CORS==4.0.0 # For Cross-Origin Resource Sharing
 stripe==12.3.0
 GeoAlchemy2
 psycopg2-binary
+google-cloud-secret-manager==2.16.2
+google-cloud-secret-manager==2.16.2
